Update styles.css - Fixed navbar and made sidenav not visible on small screen sizes

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    overflow-x: hidden;
 }
 
 html {
@@ -243,6 +242,12 @@ html {
 .sideNav a.activeNav:before {
     top: 0;
 }
+
+@media only screen and (max-width: 300px) {
+    .sideNav {
+        display: none;
+    }
+}
 /* Sidenav End -----------------------------------------------------------------------------------------------------------------*/
 
 /* Profile and project content cards ------------------------------------------------------------------------------------------ */
@@ -250,6 +255,7 @@ html {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+	overflow-x: hidden;
 }
 
 .profileContentCard {
